syntax = "proto3";

package distributed;

message DataRow {
  string key = 1;
  string value = 2;
}

message Ack {
  string status = 1;
}

service DataPushService {
  rpc SendData (DataRow) returns (Ack);
}
